--- a/FacadePlatform/pom.xml
+++ b/FacadePlatform/pom.xml
@@ -157,6 +157,15 @@
                 <!--</dependencies>-->
             <!--</plugin>-->
 
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.6</version>
+                    <configuration>
+                        <skipTests>true</skipTests>
+                    </configuration>
+                </plugin>
+
         </plugins>
     </build>
 
