--- a/FacadePlatform/src/main/resources/application.yml
+++ b/FacadePlatform/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
 # datasource with druid through mysql
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?userUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: root
+    url: jdbc:mysql://107.170.204.204:3306/ai_platform?userUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: aiuser
+    password: aiuser
     sql-script-encoding: UTF-8
     type: com.alibaba.druid.pool.DruidDataSource
     filters: stat
