--- a/FacadePlatform/pom.xml
+++ b/FacadePlatform/pom.xml
@@ -29,6 +29,7 @@
         <mybatis.enhance.version>1.0.2</mybatis.enhance.version>
         <guava.version>21.0</guava.version>
         <mybatis.mapper.version>2.0.1</mybatis.mapper.version>
+        <mybatis.pagehelper.version>1.1.3</mybatis.pagehelper.version>
         <shiro.version>1.4.0</shiro.version>
         <tika.version>1.17</tika.version>
     </properties>
@@ -81,6 +82,12 @@
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>${mybatis.mapper.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${mybatis.pagehelper.version}</version>
         </dependency>
 
         <dependency>
