--- a/FacadePlatform/src/main/resources/application.yml
+++ b/FacadePlatform/src/main/resources/application.yml
@@ -13,6 +13,19 @@ spring:
     multipart:
       max-file-size: 2000MB
       max-request-size: 500MB
+  mail:
+    host: smtp.163.com
+    username: iammengfengfei@163.com
+    password: WangDong0719
+    default-encoding: UTF-8
+    protocol: smtp
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
 # common config
 # datasource with druid through mysql
   datasource:
@@ -110,6 +123,7 @@ server:
 #      min-idle: 0
 #      max-active: 8
 #      max-wait: -1
+
 
 # 根据部署的系统选择所要上传的目录在哪
 upload:
