--- a/FacadePlatform/pom.xml
+++ b/FacadePlatform/pom.xml
@@ -123,6 +123,13 @@
             <version>${guava.version}</version>
         </dependency>
 
+        <!-- javaCV -->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
