修改register.html，添加mail

--- a/FacadePlatform/src/main/resources/application.yml
+++ b/FacadePlatform/src/main/resources/application.yml
@@ -130,4 +130,9 @@ upload:
   folder: home/upload/
 
 python:
+  img:
+    path: /home/dl/Documents/FastPhotoStyle
 
+video-stream:
+  ip: localhost
+  port: 5080
